fix: responsive shifts

--- a/src/pages/Shifts/Shifts.css
+++ b/src/pages/Shifts/Shifts.css
@@ -1,14 +1,14 @@
-.cont-turno {
+.shift-cont {
   /* overflow: hidden; */
   max-width: 100%;
   overflow: auto;
 }
 
-.cont-turno ul {
+.shift-cont ul {
   padding-left: 0;
 }
 
-.cont-turno ul li {
+.shift-cont ul li {
   list-style-type: none;
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   gap: 1rem;
   width: 100%;
-  min-width: 1100px;
+  /* min-width: 1100px; */
 }
 
 .cont-listado-dias li {
@@ -48,7 +48,7 @@
   /* width: auto; */
   width: 100%;
   height: 100vh;
-  padding: 0.5rem;
+  padding: 0.15rem;
 }
 
 .item-dia h2 {
